Fix mobile horizontal scrollbar issue and update styles

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,14 @@
   font-family: "Poppins";
 }
 
-body{
-  max-width: 100vw; 
-  overflow-x: hidden; 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden !important; 
 }
+
 
 
 @keyframes spin-slow {
